--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -23,6 +23,7 @@ jobs:
         pip install pytest
         pip install torch
         pip install numpy
+        pip install tensorflow
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run tests
       run: |
